--- a/exercicio-jquery/styles/main.css
+++ b/exercicio-jquery/styles/main.css
@@ -91,3 +91,9 @@ ul li{
 .riscado {
     text-decoration: line-through;
 }
+.initial_item-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
