--- a/exercicio_plugins_jquery/styles/main.css
+++ b/exercicio_plugins_jquery/styles/main.css
@@ -13,6 +13,9 @@ h1, h2 {
 label, h2, h1, button {
     text-transform: uppercase;
 }
+label {
+    margin-top: 5px;
+}
 button {
     width: 100%;
     padding: 1em;
