--- a/SASS_Pratica/source/config/reset.scss
+++ b/SASS_Pratica/source/config/reset.scss
@@ -1,6 +1,7 @@
+@use 'variables.scss';
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: variables.$fontFamily;
 }
