--- a/Aulas/Grunt/dev/styles/main.css
+++ b/Aulas/Grunt/dev/styles/main.css
@@ -29,9 +29,24 @@ input {
   display: block;
   margin: 16px auto 0;
   font-size: 2em;
-  max-width: 120px;
+  max-width: 200px;
   border: none;
   background-color: transparent;
   color: #fff;
   border-bottom: 6px solid #fff;
+  text-align: center;
+}
+.resultado {
+  display: flex;
+  margin: 0 auto;
+  width: fit-content;
+  padding: 0 20px;
+  border: 8px dotted #fff;
+  margin-top: 20px;
+}
+.resultado span {
+  font-size: 4em;
+  font-weight: bold;
+  margin: 0 20px;
+  color: #f7fbff;
 }
